# convert_excel

./: CLAUDE.md  README.md  README.txt  convert_excel.py  excel_converter.spec  excel_converter_gui.spec  package.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
scripts/: package.py
src/excel_converter/: __init__.py  __main__.py  cli.py  com_mode.py  discovery.py  fallback.py  gui.py
test_files/: empleados.xls  inventario_multisheet.xls  ventas_2003.xls
test_files/por_region/: norte.xls  sur.xls
test_files/por_region/internacional/: global.xls
